<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathWorm</string>
    <string name="title_misc">Misc</string>
    <string name="title_primes">Primes</string>
    <string name="title_gcd">GCD</string>
    
    <string name="input_a">a: </string>
    <string name="input_b">b: </string>
    <string name="input_c">c: </string>
    <string name="input_m">m: </string>
    <string name="input_n">n: </string>
    <string name="hint_number">&lt;num&gt;</string>
    
    <string name="choose">C(n,m)</string>
    <string name="convert">a[base b] -> X[base c]</string>
    <string name="diophAll">ax + by = c (ALL)</string>
    <string name="diophGcd">ax + by = gcd(a,b)</string>
    <string name="diophOne">ax + by = c (ONE)</string>
    <string name="factorise">Factorise</string>
    <string name="gcd">gcd</string>
    <string name="isPrime">Prime?</string>
    <string name="isTriple">Pythagorean triple?</string>
    <string name="lcm">lcm</string>
    <string name="moduloDivision">ax ≡ b (mod c)</string>
    <string name="nFact">n!</string>
    <string name="primesList">All primes up to n</string>

    <string name="ans_isTriple">Is a Pythagorean triple</string>
    <string name="ans_isNotTriple">Is not a Pythagorean triple</string>
    <string name="ans_errorNumberFormat">Error; check input</string>
    <string name="ans_errorNumberTooBig">The input number is too big.</string>
    <string name="ans_isPrime">Prime</string>
    <string name="ans_isNotPrime">Not prime</string>
    <string name="ans_noSolutions">There are no solutions.</string>
    
</resources>
