<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_n" />

            <EditText
                android:id="@+id/frag_misc_editTextN"
                style="@style/ShortNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_m" />

            <EditText
                android:id="@+id/frag_misc_editTextM"
                style="@style/ShortNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frag_misc_buttonFact"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/nFact" />

        <Button
            android:id="@+id/frag_misc_buttonChoose"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/choose" />
    </LinearLayout>

    <TextView
        android:id="@+id/frag_misc_textViewAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center" />

    <!-- Separator -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff3366ff" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_a" />

            <EditText
                android:id="@+id/frag_misc_editTextA"
                style="@style/ShortNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_b" />

            <EditText
                android:id="@+id/frag_misc_editTextB"
                style="@style/ShortNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_c" />

            <EditText
                android:id="@+id/frag_misc_editTextC"
                style="@style/ShortNumberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/frag_misc_buttonTriple"
        style="@style/MediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/isTriple" />

    <Button
        android:id="@+id/frag_misc_buttonConvert"
        style="@style/MediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/convert" />

    <!-- TODO: text margin -->
    <TextView
        android:id="@+id/frag_misc_textViewAns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center" />

</LinearLayout>